<?xml version="1.0"?>
<package>
  <name>navigator_shoot_vision</name>
  <version>0.0.0</version>
  <description>The navigator_shooter package</description>
  <maintainer email="kma1660@gmail.com">Kevin Allen</maintainer>
  <license>TODO</license>
  <author email="kma1660@gmail.com">Kevin Allen</author> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
